--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sentence-reader",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kathy-wazowski.github.io/sentence-reader",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -16,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "BUILD_PATH=docs react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
